--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "next": "12.0.4",
+    "next-auth": "^4.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "stripe": "^8.191.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
